<resources>
    <string name="app_name">BookKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="last_updated">Updated</string>
</resources>
